--- a/go/stickman-boxing-ko-champion.html
+++ b/go/stickman-boxing-ko-champion.html
@@ -134,7 +134,7 @@
 
     <div class="row">
       <div class="col-md-10">
-  <iframe class="gm-iframe" id="gm-area" src="https://bonbang.github.io/store77/ovo/" width="810" height="540" scrolling="none" frameborder="0" allowfullscreen></iframe>
+  <iframe class="gm-iframe" id="gm-area" src="https://sudoku-online.github.io/store77/ovo/" width="810" height="540" scrolling="none" frameborder="0" allowfullscreen></iframe>
    <div style="padding-top: 10px;" class="container" align="Center"> 
       <button  class="btn theme-btn-1 btn-effect-1 text-uppercase" onclick="openFullscreen();">FullScreen</button>
 
@@ -209,7 +209,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/battle-wheels.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/battle-wheels.png">
+                            <img src="https://sudoku-online.github.io/img/battle-wheels.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -224,7 +224,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/sausage-flip.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/sausage-flip.png">
+                            <img src="https://sudoku-online.github.io/img/sausage-flip.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -239,7 +239,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/gobble.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/gobble.png">
+                            <img src="https://sudoku-online.github.io/img/gobble.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -254,7 +254,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/short-ride.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/short-ride.png">
+                            <img src="https://sudoku-online.github.io/img/short-ride.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -269,7 +269,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/rooftop-snipers.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/rooftop-snipers.png">
+                            <img src="https://sudoku-online.github.io/img/rooftop-snipers.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -284,7 +284,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/moto-x3m-winter.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/moto-x3m-winter.png">
+                            <img src="https://sudoku-online.github.io/img/moto-x3m-winter.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -299,7 +299,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/jumping-shell.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/jumping-shell.png">
+                            <img src="https://sudoku-online.github.io/img/jumping-shell.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -314,7 +314,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/doge-miner.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/doge-miner.png">
+                            <img src="https://sudoku-online.github.io/img/doge-miner.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -329,7 +329,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/basketball-line.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/basketball-line.png">
+                            <img src="https://sudoku-online.github.io/img/basketball-line.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -344,7 +344,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/temple-of-boom.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/temple-of-boom.png">
+                            <img src="https://sudoku-online.github.io/img/temple-of-boom.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -359,7 +359,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/vex-7.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/vex-7.png">
+                            <img src="https://sudoku-online.github.io/img/vex-7.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -374,7 +374,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/thumb-fighter.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/thumb-fighter.png">
+                            <img src="https://sudoku-online.github.io/img/thumb-fighter.png">
                             <div class="product-badge">       
                             </div>
                         </div>
